tests/typechecker/binary-operators-01.expect
tests/typechecker/binary-operators-01.prog:3:8: error: mismatched types: 'bool' and 'u6'
tests/typechecker/binary-operators-01.prog:4:6: error: mismatched types: 'u6' and 'u7'
tests/typechecker/binary-operators-01.prog:5:6: error: expression of type 'u6' is not comparable
tests/typechecker/binary-operators-01.prog:6:9: error: expression of type 'bool' is not comparable
tests/typechecker/binary-operators-01.prog:7:6: error: expression of type 'u6' is not comparable
tests/typechecker/binary-operators-01.prog:8:9: error: expression of type 'bool' is not comparable