tests/typechecker/binary-operators-01.prog
main: proc() void
{
  true && 42;
  42 || 69;
  42 < false;
  false >= 42;
  42 > false;
  false <= 42;
}
